# Y_lab_fastapi

./: .env  .env_test  .pre-commit-config.yaml  DataBase.py  Docker-compose.yml  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yaml  docker-compose.yml  dockerfile  main.py  pyproject.toml  pytest.ini  python style.md  requirements.txt
application/: main.py
application/admin/: Menu.xlsx
application/core/: cache_repository.py  config.py  db.py
application/core/models/: base.py
application/dishes/: crud.py  crud_repository.py  schemas.py  service_repository.py  views.py
application/menus/: crud.py  crud_repository.py  schemas.py  service_repository.py  views.py
application/parser/: parser.py  updater.py
application/schema/: submenus.py
application/submenus/: crud.py  crud_repository.py  schemas.py  servise_repository.py  views.py
application/task/: parser.py  task.py  updater.py
application/tasks/: parser.py  task.py  updater.py
application/tests/: conftest.py  test_1_menu_crud.py  test_2_submenu_crud.py  test_3_dishes_crud.py  test_4_count.py  test_count.py  test_dishes_crud.py  test_menu_crud.py  test_submenu_crud.py  test_tree.py
core/: config.py  db.py
dishes/: schemas.py
menus/: crud.py  schemas.py
schema/: dishes.py  menus.py  submenus.py
submenus/: crud.py  schemas.py
tests/: conftest.py  test_count.py  test_dishes_crud.py  test_menu_crud.py  test_submenu_crud.py
