[tool.poetry]
name = "y-lab-fastapi"
version = "1"
description = "This is fastapi aplication"
authors = ["gglo0ol <124757163+gglo0ol@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.27.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
